--- a/Tuan3/tn1.html
+++ b/Tuan3/tn1.html
@@ -14,7 +14,7 @@
     <p>facebook.com./top.vn</p>
     <p>ThuThua.TayNinh</p>
     <h3 style="background-color: #000; color:#fff; text-align:center">MỤC TIÊU NGHỀ NGHIỆP</h3>
-    Tốt nghiệp Xuất sắc ngành Marketing của Đại học TopCV, tôi có nền tảng kiến thức vững chắc về Marketing, nghiên cứu thị trường và hành vi người tiêu dùng. Tôi cũng có kinh nghiệm thực tế khi tham gia CLB Marketing MAC với vai trò Phó ban Truyền thông. trực tiếp quản lý kênh truyền thông, tổ chức sự kiện và triển khai các chiến dịch truyền thông cho CLB. Ứng tuyển vào công ty, tôi mong muốn học hỏi, trau dồi kinh nghiệm thực tế và phát triển chuyên môn về Digital và Content Marketing.
+    Tốt nghiệp Xuất sắc ngành Marketing của Đại học TopCV, tôi có nền tảng kiến thức vững chắc về Information Technolgy, nghiên cứu thị trường và hành vi người tiêu dùng. Tôi cũng có kinh nghiệm thực tế khi tham gia CLB Marketing MAC với vai trò Phó ban Truyền thông. trực tiếp quản lý kênh truyền thông, tổ chức sự kiện và triển khai các chiến dịch truyền thông cho CLB. Ứng tuyển vào công ty, tôi mong muốn học hỏi, trau dồi kinh nghiệm thực tế và phát triển chuyên môn về Digital và Content Marketing.
     <h3 style="background-color: #000; color:#fff; text-align:center">SỞ THÍCH</h3>
     Du lịch - Ăn uống - Chơi game - Bơi lội - Chuột - Hoa hồng
     <h3 style="background-color: #000; color:#fff; text-align:center">CHỨNG CHỈ</h3>
@@ -28,4 +28,4 @@
 
 
 </body>
-</html>
+</html> 
