--- a/Tuan3/bt7.html
+++ b/Tuan3/bt7.html
@@ -1,5 +1,28 @@
 ﻿<html>
 <head>
-    <title>Định dạng văn bản</title>
+    <title>
+        Ký tự đặt biệt, chèn hình ảnh, tạo danh sách liên kết
+    </title>
 </head>
+<body>
+    <h2 style="color: deeppink; text-align: center">
+        Công ty Hoa tươi Nhân ái
+    </h2>
+    <img style="height: 150px; float: left; margin-right: 50px; " src="image/hoa-hong.jpg" />
+    <ol>
+        <li><font style="color: white; background-color: hotpink; font-weight: bold;">Giới thiệu</font>
+        <ul style="list-style-type: square; mafgin-left: 150px;">
+            <li> Thành lập ngày 20/05/2007</li>
+            <li> Chuyên cung cấp các loại hoa tươi</li>
+            <li> Có trên 20 cửa hàng bán lẽ tại TP>HCM</li>
+            <li> Nhận kết giỏ hoa theo yêu cấu của khách hàng</li>
+        </ul>
+        </li>
+        <li><font style="color: white; background-color: hotpink; font-weight: bold;">Liên hệ</font>
+        <ul style="list-style-type: square; margin-left: 150px;">
+            <li>Điện thoại:</li>
+        </ul>
+        </li>
+    </ol>
+</body>
 </html>
